# AxnoverOS

./: .clangd  .gitignore  Cargo.toml  Makefile  README.md  build.ps1  x86_64-fracture_os.json
.cargo/: config.toml
boot/: Makefile  boot.asm  stage2.asm
boot/uefi/: README.md
docs/: BOOT.md  BOOT_SUMMARY.md  IPC_AND_SIGNALS.md  PROJECT_STATUS.md  ROADMAP.md
kernel/: x86_64-unknown-none.json
kernel/src/: allocator.rs  interrupts.rs  ipc.rs  lib.rs  memory.rs  process.rs  shm.rs  signal.rs  syscall.rs  vga.rs
kernel/tests/: allocator_test.rs
lib/libfracture/include/: ipc.h  signal.h
src/: fs.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  process.rs  syscall.rs  vga_buffer.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tools/: create-image.sh
