[package]
name = "fracture_os"
version = "0.1.0"
edition = "2024"
authors = ["chuyuewei"]

[dependencies]
bootloader = { version = "0.11.7", features = ["map_physical_memory"] }
volatile = "0.6.1"
spin = "0.9.8"
x86_64 = "0.15.1"
uart_16550 = "0.3.1"
pic8259 = "0.11.0"
pc-keyboard = "0.7.0"
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
